# Omni-Booking-Automation-Suite

./: .gitignore  README.md  oldReadme.md  pyproject.toml
TLS_Germany/: German-visa services in Alexandria _ TLScontact.html  app.py  firest is excel and google sheet have same extent.xlsx  get_page.py  gui.py  out  project_context.md  project_context.py  prompt.md  temp.py  temp1.py
TLS_Germany/German-visa services in Alexandria _ TLScontact_files/: anchor.html  api.js.download  osano.js.download
TLS_Germany/browsers/: __init__.py  browser_base.py  captcha_handler.py  chrome.py  how_to_work_on_WSL.md  stealth_actions.py
TLS_Germany/config/: __init__.py  selectors.py  settings.py
TLS_Germany/core/: __init__.py  data_handler.py
TLS_Germany/downloaded_files/: captured_dropdown_page.html
TLS_Germany/gui/: dialogs.py  gui.py  main.py  main_window.py  theme.py
config/: settings.py
omni_booking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: Applications list _ TLScontact[4].html  German-visa services in Alexandria _ TLScontact[2].html  Germany Visa Application Centres _ TLScontact[1].html  Germany visa application centre _ TLScontact[0][0].html  TLScontact Login[3].html
templates/Germany visa application centre _ TLScontact[0]_files/: 1255-cf84330a9a7676e5.js.download  1306-5b729b20baaf475c.js.download  1352-3713acc678adea68.js.download  1356-814af99a1613cc1d.js.download  1937-4b6ce798c512c772.js.download  3197-477632c076c6434e.js.download  3276-7e5c90ae87912373.js.download  4558-8109b30abc107368.js.download  (+17 more)
vfs_Holland/: oldReadme.md
(+166 files in other folders)
