[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omni_booking"
version = "0.1.0"
dependencies = [
    # List your other requirements here
]

# أضف هذا الجزء لإخبار الأداة بالمجلدات التي يجب تضمينها
[tool.setuptools]
packages = ["config", "templates", "TLS_Germany", "vfs_Holland"]